# chat-with-video

./: .gitignore  pyproject.toml  test_transcript-small.txt  test_transcript.txt
main/features/audio_extraction/config/: settings.py
main/features/audio_extraction/data/: ffmpeg_extractor.py
main/features/audio_extraction/domain/: interfaces.py  models.py  use_case.py
main/features/audio_extraction/exceptions/: errors.py
main/features/audio_extraction/service/: api.py
main/features/transcription/config/: settings.py
main/features/transcription/data/: whisper_transcriber.py
main/features/transcription/domain/: interfaces.py  models.py  use_case.py
main/features/transcription/exceptions/: errors.py
main/features/transcription/service/: api.py
test/features/audio_extractor/: test_audio_extraction_api.py
test/features/transcription/: test_transcription_api.py  test_transcription_to_file.py
